samples/_failures_safe/1761704966_35e776_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b783453c.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_b783453c.c:188:5: error: expected expression at end of input
  188 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_b783453c.c:188:5: error: expected declaration or statement at end of input
